# backend

./: .env.example  .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION_REPORT.md  API_REFERENCE.md  API_REFERENCE_FULL.md  ARCHITECTURE.md  CHANGELOG.md  DEVELOPMENT.md  ENDPOINTS_FULL.md  FEATURE_FLAGS.md  FINANCIAL_INTEGRITY.md  MIGRATION_V2_API.md  MODULE_IMPLEMENTATION_REPORT.md  Makefile  OPERATIONS.md  RBAC.md  RBAC_COMPATIBILITY.md  README.md  RESPONSE_STANDARDIZATION_REPORT.md  RESPONSE_SYSTEM_MIGRATION_COMPLETE.md  debug_category_creation.py  debug_customers.py  debug_inventory.py  debug_sales.py  debug_stock_requests.py  debug_users.py  debug_valuation.py  fix_db_connections.py  fix_service_model_pattern.py  generated_openapi.json  migration_script.py  pyproject.toml  pytest.ini  quick_sales_check.py  quick_server_start.py  quick_validation_test.py  requirements-test.txt  requirements.txt  response_audit.py  (+4 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
app/: __init__.py  main.py
app/core/: __init__.py  audit.py  audit_decorator.py  authorization.py  base_schema.py  config.py  config_validation.py  dependencies.py  error_handler.py  exceptions.py  legacy_mirroring.py  logging_config.py  normalizer.py  notifications.py  pagination.py  permissions.py  response.py  security.py  stock_requests.py  validators.py
app/db/: __init__.py  client.py  prisma.py
app/middlewares/: __init__.py  auth.py  financial_integrity.py
app/modules/: __init__.py
app/utils/: decimal_utils.py  pdf.py
backups/: backup_20250913_190810.json  backup_20250913_190811.json  backup_20250913_190812.json  backup_20250913_190813.json  backup_20250913_190814.json  backup_20250913_190816.json  backup_20250913_194044.json  backup_20250913_194046.json  backup_20250913_194047.json  backup_20250913_194048.json  backup_20250913_194049.json  backup_20250913_194050.json  backup_20250913_194051.json  backup_20250913_194756.json  backup_20250913_194757.json  backup_20250913_195751.json  backup_20250913_195752.json  backup_20250913_195753.json  backup_20250913_195754.json  backup_20250913_200015.json  backup_20250913_200016.json  backup_20250913_200017.json  backup_20250913_200018.json  backup_20250913_200019.json  backup_20250913_200020.json  backup_20250913_200021.json  backup_20250913_200022.json  backup_20250913_205334.json  backup_20250913_205335.json  backup_20250913_205336.json  backup_20250913_205337.json  backup_20250913_205338.json  backup_20250913_205339.json  backup_20250913_205340.json  backup_20250913_205341.json  backup_20250913_205737.json  backup_20250913_210443.json  backup_20250913_210444.json  backup_20250913_210602.json  backup_20250913_210603.json  (+289 more)
exports/: balance-sheet_20250907_050217.csv  balance-sheet_20250907_050224.json  income-statement_20250907_050217.csv  income-statement_20250907_050224.json
frontend/: .eslintrc.cjs  App.tsx  Attributions.md  FEATURE_INVENTORY.md  README.md  eslint.config.cjs  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  vitest.setup.ts
frontend/components/: AdjustStockModal.tsx  AuditLogsPage.tsx  BackupPage.tsx  BranchesPage.tsx  CategoriesPage.tsx  ConfirmDialog.tsx  CustomersPage.tsx  Dashboard.tsx  ErrorState.tsx  POSPage.tsx  (+13 more)
prisma/: schema.prisma
scripts/: generate_full_api_reference.py  reset_and_seed.py  seed.py  seed_permissions.py
tests/: README.md  __init__.py  conftest.py  run_tests.py  test_500_errors.py  test_all_endpoints.sh  test_all_methods.py  test_comprehensive.py  test_export.py  test_financial_reports.py  test_login_email_and_invalid_username.py  test_login_username.py  test_runner.py  test_sales_list.py  verify_fixes.py
(+176 files in other folders)
