[tool.ruff]
line-length = 100
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # bugbear
  "C4", # comprehensions
  "TID", # tidy imports
]
ignore = [
  "E203",  # whitespace before : (black compatibility)
  "B008",  # function call in default argument (common in FastAPI Depends)
]

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.per-file-ignores]
"tests/**" = ["S101"]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project]
name = "sofinance-backend"
version = "1.0.0"
requires-python = ">=3.11"
