[tool.ruff]
line-length = 100
select = [
  "E",  # pycodestyle errors
  "F",  # pyflakes
  "I",  # isort
  "UP", # pyupgrade
  "B",  # bugbear
  "C4", # comprehensions
  "TID", # tidy imports
]
ignore = [
  "E203",  # whitespace before : (black compatibility)
  "B008",  # function call in default argument (common in FastAPI Depends)
]

[tool.ruff.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.per-file-ignores]
"tests/**" = [
  "S101",  # allow assert usage in tests
  "E501",  # ignore line length in tests to preserve readability of long payloads/URLs
]
"generated/**" = [
  "E501",  # generated prisma types have long lines
  "E402",  # import position artifacts in generated code
  "B011",  # deliberate assert False patterns used as sentinels
  "UP007", # allow 'Union' syntax in generated code
]
"scripts/**" = [
  "E501",  # permit long instructional/help strings and formatted logging
]
"quick_*" = [
  "E501",  # quick helper scripts with long lines
]
"test_all_endpoints_comprehensive.py" = [
  "E501",  # single comprehensive script allowed long lines
]

[tool.black]
line-length = 100

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project]
name = "sofinance-backend"
version = "1.0.0"
requires-python = ">=3.11"
